<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_favorites">

    <fragment
        android:id="@+id/navigation_input"
        android:name="com.example.kochbuch.view.ui.input.InputFragment"
        android:label="@string/input"
        tools:layout="@layout/fragment_input" />


    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.kochbuch.view.ui.favorites.FavoriteRecipeListFragment"
        android:label="@string/title_Favorites"
        tools:layout="@layout/fragment_recipe_list" >
        <action
            android:id="@+id/action_recipe_list_to_recipe_detail"
            app:destination="@id/navigation_recipe_pager"
            app:enterAnim="@animator/fragment_fade_enter"
            app:exitAnim="@animator/fragment_fade_exit"
            app:launchSingleTop="false"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.kochbuch.view.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_recipe_pager"
        android:name="com.example.kochbuch.view.ui.recipepager.RecipePagerFragment"
        android:label="@string/title_recipe_pager"
        tools:layout="@layout/fragment_recipe_pager">
        <argument
            android:name="recipeId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipe_detail"
        android:name="com.example.kochbuch.view.ui.recipedetail.RecipeDetailFragment"
        android:label="@string/title_recipe_details"
        tools:layout="@layout/fragment_recipe_detail">
        <argument
            android:name="recipeId"
            app:argType="long" />
    </fragment>
    
</navigation>